--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <title>Keep Fresh</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/bundle.js" defer></script>
+    <script src = "https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <div id="root"></div>
