--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/style.css" />
     <script src="/bundle.js" defer></script>
     <script src = "https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQSVADE8uw_nIpV8COSSaqf8Lh9y8Rb5g"></script>
   </head>
   <body>
     <div id="root"></div>
